--- a/package.json
+++ b/package.json
@@ -14,9 +14,16 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "if-env": "^1.0.4",
+    "nodemailer": "^6.4.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "concurrently": "^5.1.0",
+    "nodemon": "^2.0.2"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jlovejo2/Portfolio_react.git"
